--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.20.2
   file_picker: ^10.3.7
   syncfusion_flutter_pdfviewer: ^30.1.40
+  hijri: ^3.0.0
 
 dev_dependencies:
   flutter_test:
